; ModuleID = '/home/carl/AnghaBench/kphp-kdb/news/extr_news-data.c_insert_bookmark_log.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/news/extr_news-data.c_insert_bookmark_log.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lev_bookmark_insert = type { i32, i32 }

@LEV_BOOKMARK_INSERT = common dso_local global i64 0, align 8
@LEV_BOOKMARK_DELETE = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @insert_bookmark_log(i32 %0, i32 %1, i32 %2, i32 %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca %struct.lev_bookmark_insert*, align 8
  store i32 %0, i32* %6, align 4
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %12 = load i32, i32* %10, align 4
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %14, label %16

14:                                               ; preds = %5
  %15 = load i64, i64* @LEV_BOOKMARK_INSERT, align 8
  br label %18

16:                                               ; preds = %5
  %17 = load i64, i64* @LEV_BOOKMARK_DELETE, align 8
  br label %18

18:                                               ; preds = %16, %14
  %19 = phi i64 [ %15, %14 ], [ %17, %16 ]
  %20 = load i32, i32* %7, align 4
  %21 = sext i32 %20 to i64
  %22 = add nsw i64 %19, %21
  %23 = load i32, i32* %6, align 4
  %24 = call %struct.lev_bookmark_insert* @alloc_log_event(i64 %22, i32 8, i32 %23)
  store %struct.lev_bookmark_insert* %24, %struct.lev_bookmark_insert** %11, align 8
  %25 = load i32, i32* %8, align 4
  %26 = load %struct.lev_bookmark_insert*, %struct.lev_bookmark_insert** %11, align 8
  %27 = getelementptr inbounds %struct.lev_bookmark_insert, %struct.lev_bookmark_insert* %26, i32 0, i32 0
  store i32 %25, i32* %27, align 4
  %28 = load i32, i32* %9, align 4
  %29 = load %struct.lev_bookmark_insert*, %struct.lev_bookmark_insert** %11, align 8
  %30 = getelementptr inbounds %struct.lev_bookmark_insert, %struct.lev_bookmark_insert* %29, i32 0, i32 1
  store i32 %28, i32* %30, align 4
  ret void
}

declare dso_local %struct.lev_bookmark_insert* @alloc_log_event(i64, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
